style changes and testo bot icon added

--- a/src/Apartment.css
+++ b/src/Apartment.css
@@ -1,7 +1,7 @@
 .apartment {
+  background-color: rgba(0,0,0,0.3);
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
 }
 
 .apartmentColumn {
