--- a/src/Squaremeter.css
+++ b/src/Squaremeter.css
@@ -2,6 +2,7 @@
   width: 100px;
   height: 100px;
   border: 5px solid transparent;
+  margin: 2px 0px 2px 1px;
 }
 
 .squaremeter-unknown {
@@ -9,7 +10,7 @@
 }
 
 .squaremeter-testobot {
-  background-color: yellow;
+  background-color: grey;
 }
 
 .squaremeter-good {
@@ -25,17 +26,17 @@
 }
 
 .testobot-east {
-  border-right: 5px solid purple;
+  border-right: 5px solid orange;
 }
 
 .testobot-south {
-  border-bottom: 5px solid purple;
+  border-bottom: 5px solid orange;
 }
 
 .testobot-west {
-  border-left: 5px solid purple;
+  border-left: 5px solid orange;
 }
 
 .testobot-north {
-  border-top: 5px solid purple;
+  border-top: 5px solid orange;
 }
