--- a/src/Squaremeter.css
+++ b/src/Squaremeter.css
@@ -1,7 +1,7 @@
 .squaremeter {
   width: 100px;
   height: 100px;
-  border: 5px solid transparent;
+  border: 10px solid transparent;
   margin: 2px 0px 2px 1px;
 }
 
@@ -14,29 +14,29 @@
 }
 
 .squaremeter-good {
-  background-color: green;
+  background-color: rgba(0,255,0,0.5);
 }
 
 .squaremeter-hot {
-  background-color: red;
+  background-color: rgba(255,0,0,0.5);
 }
 
 .squaremeter-cold {
-  background-color: blue;
+  background-color: rgba(0,0,255,0.5);
 }
 
-.testobot-east {
-  border-right: 5px solid orange;
+.squaremeter-testobot-east {
+  border-right: 10px solid orange;
 }
 
-.testobot-south {
-  border-bottom: 5px solid orange;
+.squaremeter-testobot-south {
+  border-bottom: 10px solid orange;
 }
 
-.testobot-west {
-  border-left: 5px solid orange;
+.squaremeter-testobot-west {
+  border-left: 10px solid orange;
 }
 
-.testobot-north {
-  border-top: 5px solid orange;
+.squaremeter-testobot-north {
+  border-top: 10px solid orange;
 }
