--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,16 @@ html {
 }
 
 .title {
-  font-size: 50px;
+  font-size: 40px;
   padding: 10px;
+  text-align: center;
+}
+
+.content {
+  display: flex;
+}
+
+.reload-button {
+  background-color: rgba(0,0,0,0.3);
+  padding: 20px;
 }
