--- a/src/RemoteControl.css
+++ b/src/RemoteControl.css
@@ -1,5 +1,5 @@
 .remoteControl {
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   cursor: pointer;
