--- a/src/Settings.css
+++ b/src/Settings.css
@@ -1,5 +1,5 @@
 .settings {
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: space-evenly;
   padding: 20px;
