--- a/src/Squaremeter.css
+++ b/src/Squaremeter.css
@@ -17,15 +17,15 @@
 }
 
 .squaremeter-good {
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .squaremeter-hot {
-  background-color: rgba(255,0,0,0.2);
+  background-color: rgba(255, 0, 0, 0.2);
 }
 
 .squaremeter-cold {
-  background-color: rgba(0,200,255,0.2);
+  background-color: rgba(0, 200, 255, 0.2);
 }
 
 .squaremeter-testobot-east {
